--- a/src/Data-Structures/Styles/stack.css
+++ b/src/Data-Structures/Styles/stack.css
@@ -18,6 +18,7 @@
   padding: 1rem 0.5rem;
   border-radius: 4px;
   transition: all 0.25s ease-out;
+  text-align: center;
 }
 
 .stack-node-appear {
