--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Oxygen:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans|Oxygen:300,400|Oxygen+Mono&display=swap');
 
 :root {
   --headfont: 'Fira Sans', sans-serif;
   --bodyfont: 'Oxygen', sans-serif;
+  --monospace: 'Oxygen Mono', monospace;
   --white: #ffffff;
   --offwhite: #f9f9fc;
   --darkgray: #1b1d1e;
