Align visual items centrally

--- a/src/VisualPage.css
+++ b/src/VisualPage.css
@@ -63,5 +63,7 @@
 .VisualPage .Visual {
   grid-area: visual;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   min-height: auto;
 }
